# webcam-object-detection-3000

./: .gitignore  Cargo.toml  README.md
model/: .gitignore  train.ipynb
src/: annotate.rs  classify.rs  ffmpeg.rs  main.rs  preprocess.rs
