[package]
edition = "2021"
name = "webcam-black-gold-3000"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
image = "0.24.2"
imageproc = "0.23.0"
lazy_static = "1.4.0"
rusttype = "0.9.2"
tensorflow = "0.18.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
